# llm-compliance

./: .gitattributes  .gitignore  AGENTS.md  README.md  README.old.md  ask.py  judge_compliance.py  lexical_diversity.py  model_catalog.jsonl  models.txt  pyproject.toml  report.py  report_compliance_categories.py  requirements.txt  us_hard_models.txt
.github/: FUNDING.yml
analysis.openai_gpt-4o-2024-11-20/: compliance_china_criticism_anthropic_claude-3-5-sonnet-20241022.jsonl  compliance_china_criticism_anthropic_claude-3-7-sonnet-20250219.jsonl  compliance_china_criticism_deepseek_deepseek-r1-0528.jsonl  compliance_china_criticism_deepseek_deepseek-r1-zero.jsonl  compliance_china_criticism_deepseek_deepseek-r1.jsonl  compliance_china_criticism_google_gemini-1.5-pro-002.jsonl  compliance_china_criticism_meta-llama_llama-3.1-70b-instruct.jsonl  compliance_china_criticism_moonshotai_kimi-vl-a3b-thinking.jsonl  compliance_china_criticism_openai_gpt-4.1-2025-04-14.jsonl  compliance_china_criticism_openai_o1-preview-2024-09-12.jsonl  compliance_china_criticism_qwen_qwen-max.jsonl  compliance_china_criticism_qwen_qwen2.5-vl-72b-instruct.jsonl  compliance_china_criticism_qwen_qwen3-235b-a22b.jsonl  compliance_china_criticism_qwen_qwen3-30b-a3b.jsonl  compliance_china_criticism_qwen_qwen3-32b.jsonl  compliance_china_criticism_thudm_glm-4-z1-32b-0414.jsonl  compliance_china_criticism_x-ai_grok-3-beta.jsonl  compliance_china_criticism_x-ai_grok-3-mini-beta.jsonl  compliance_eu_criticism_anthropic_claude-3-5-sonnet-20241022.jsonl  compliance_eu_criticism_anthropic_claude-3-7-sonnet-20250219.jsonl  compliance_eu_criticism_deepseek_deepseek-chat-v3-0324.jsonl  compliance_eu_criticism_deepseek_deepseek-r1-zero.jsonl  compliance_eu_criticism_google_gemini-1.5-pro-002.jsonl  compliance_eu_criticism_meta-llama_llama-4-maverick.jsonl  compliance_eu_criticism_meta-llama_llama-4-scout.jsonl  compliance_eu_criticism_openai_chatgpt-4o-latest.jsonl  compliance_eu_criticism_openai_gpt-4.1-2025-04-14.jsonl  (+103 more)
(+670 files in other folders)
